fixes price line spacing in deposit block

--- a/web/src/css/checkout.css
+++ b/web/src/css/checkout.css
@@ -181,7 +181,7 @@ text-transform: none;
   color:#000000;
 }
 #refundable-text-span {
-  margin-top: 0.16rem;
+/*  margin-top: 0.16rem;*/
 }
 #deposit-text-span .discount-container{
   color:white;
